--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -7,7 +7,6 @@
 
   <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
 
-  <!-- Description -->
   <meta name="description" content="A reflection on the paradox of a perfect, all-knowing God and a flawed creation, questioning free will, blame, and the image of God we were taught to believe in.">
   <meta property="og:description" content="A reflection on the paradox of a perfect, all-knowing God and a flawed creation, questioning free will, blame, and the image of God we were taught to believe in.">
 
@@ -56,13 +55,19 @@
   }
   </script>
 
-  <!-- Main reflections stylesheet (use your global one) -->
+  <!-- Main reflections stylesheet -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
 
   <style>
+    body {
+      background:#1f1815;
+      color:#f3e6dd;
+      margin:0;
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
+    }
+
     /* =========================
-       GLOBAL FIXED HEADER
-       (same style A as your basis page)
+       GLOBAL HEADER (2 ROWS)
     ========================== */
     .ref-header {
       position: fixed;
@@ -78,141 +83,161 @@
     .ref-header-inner {
       max-width: 1100px;
       margin: 0 auto;
-      padding: 0.5rem 1rem;
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-    }
-
-    /* Brand / logo */
-    .brand-link {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      text-decoration: none;
-    }
-
-    .brand-mark {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      border: 2px solid #ff6b3d;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 0.9rem;
-      color: #ff6b3d;
-    }
-
-    .brand-text {
+      padding: 0.55rem 1rem 0.65rem;
       display: flex;
       flex-direction: column;
-      line-height: 1.1;
-    }
-
-    .brand-title {
-      font-size: 0.9rem;
-      font-weight: 600;
-      letter-spacing: 0.04em;
-      text-transform: uppercase;
-      color: #ffffff;
-    }
-
-    .brand-subtitle {
-      font-size: 0.7rem;
-      color: #f0e0d0;
-      opacity: 0.8;
-    }
-
-    /* Center nav */
-    .ref-nav {
-      margin-left: 1rem;
-      flex: 1;
-    }
-
-    .ref-nav ul {
-      display: flex;
-      gap: 0.75rem;
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .ref-nav a {
-      display: inline-flex;
-      align-items: center;
-      padding: 0.35rem 0.7rem;
-      border-radius: 999px;
-      font-size: 0.8rem;
-      text-decoration: none;
-      color: #f3e4d5;
-      border: 1px solid transparent;
-      white-space: nowrap;
-      transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
-    }
-
-    .ref-nav a:hover {
-      background: rgba(255, 107, 61, 0.14);
-      border-color: rgba(255, 107, 61, 0.4);
-    }
-
-    .ref-nav a.active {
-      background: #ff6b3d;
-      color: #1f1815;
-      border-color: #ff6b3d;
-      font-weight: 600;
-    }
-
-    /* Right side of header */
-    .ref-header-right {
-      display: flex;
-      align-items: center;
-      gap: 0.75rem;
-    }
-
-    .current-page-badge {
-      display: inline-flex;
-      align-items: center;
       gap: 0.4rem;
-      padding: 0.3rem 0.7rem;
-      border-radius: 999px;
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.15);
-      font-size: 0.75rem;
-      color: #f7e9dd;
-      white-space: nowrap;
     }
 
+    /* Top row: title + subtitle */
+    .header-top {
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      gap:0.75rem;
+    }
+
+    .title-block {
+      display:flex;
+      flex-direction:column;
+      min-width:0;
+    }
+    .title-block h1 {
+      margin:0;
+      font-size:1.6rem;
+      letter-spacing:.04em;
+    }
+    .title-block p.sub {
+      margin:.25rem 0 0;
+      font-size:.9rem;
+      color:#c9b0a4;
+    }
+
+    /* Right in top row: small current-page badge */
+    .current-page-badge {
+      display:inline-flex;
+      align-items:center;
+      gap:0.35rem;
+      padding:0.2rem 0.6rem;
+      border-radius:999px;
+      background:rgba(255,255,255,0.05);
+      border:1px solid rgba(255,255,255,0.15);
+      font-size:0.75rem;
+      color:#f7e9dd;
+      white-space:nowrap;
+      flex-shrink:0;
+    }
     .page-icon {
-      font-size: 0.85rem;
-      color: #ffb347;
+      font-size:0.85rem;
+      color:#ffb347;
+    }
+
+    /* Bottom row: hamburger + nav + brand on right */
+    .header-bottom {
+      display:flex;
+      align-items:center;
+      gap:0.75rem;
+      margin-top:0.15rem;
     }
 
     .nav-toggle {
-      display: none;
       border: 1px solid rgba(255, 255, 255, 0.35);
       background: transparent;
       border-radius: 6px;
-      padding: 0.2rem 0.45rem;
+      padding: 0.25rem 0.55rem;
       font-size: 1.1rem;
       color: #f7e9dd;
       cursor: pointer;
+      flex-shrink:0;
+    }
+
+    .ref-nav {
+      flex:1;
+      overflow-x:auto;
+    }
+
+    .ref-nav ul {
+      display:flex;
+      gap:0.55rem;
+      list-style:none;
+      padding:0;
+      margin:0;
+      white-space:nowrap;
+    }
+
+    .ref-nav a {
+      display:inline-flex;
+      align-items:center;
+      padding:0.3rem 0.7rem;
+      border-radius:999px;
+      font-size:0.8rem;
+      text-decoration:none;
+      color:#f3e4d5;
+      border:1px solid transparent;
+      transition:background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+    }
+
+    .ref-nav a:hover {
+      background:rgba(255, 107, 61, 0.14);
+      border-color:rgba(255, 107, 61, 0.4);
+    }
+
+    .ref-nav a.active {
+      background:#ff6b3d;
+      color:#1f1815;
+      border-color:#ff6b3d;
+      font-weight:600;
+    }
+
+    /* Brand / logo on the right */
+    .header-brand {
+      display:flex;
+      align-items:center;
+      gap:0.4rem;
+      margin-left:0.5rem;
+      flex-shrink:0;
+      text-decoration:none;
+    }
+
+    .brand-mark {
+      width:30px;
+      height:30px;
+      border-radius:50%;
+      border:2px solid #ff6b3d;
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      font-size:0.9rem;
+      color:#ff6b3d;
+    }
+
+    .brand-text {
+      display:flex;
+      flex-direction:column;
+      line-height:1.1;
+    }
+
+    .brand-title {
+      font-size:0.8rem;
+      font-weight:600;
+      letter-spacing:0.05em;
+      text-transform:uppercase;
+      color:#ffffff;
+    }
+
+    .brand-subtitle {
+      font-size:0.7rem;
+      color:#f0e0d0;
+      opacity:0.8;
     }
 
     /* =========================
        MAIN LAYOUT
     ========================== */
-    body {
-      background: #1f1815;
-      color: #f3e6dd;
-      margin: 0;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
-    }
-
     .page-content {
       max-width: 1100px;
       margin: 0 auto;
-      padding: 4.4rem 1rem 2.5rem; /* leaves space for fixed header */
+      padding: 4.6rem 1rem 2.5rem; /* space for header */
     }
 
     .content {
@@ -220,13 +245,6 @@
       margin: 0 auto;
       line-height: 1.75;
       font-size: 1rem;
-    }
-
-    .content h2 {
-      margin-top: 1.5rem;
-      margin-bottom: 0.4rem;
-      color: #ffb36b;
-      font-size: 1.2rem;
     }
 
     .content p {
@@ -237,15 +255,15 @@
     .divider {
       text-align: center;
       color: #ff7a00;
-      margin: 2rem 0;
+      margin: 1.8rem 0 1.4rem;
     }
 
     /* =========================
-       AUDIO PLAYLIST (tighter margins)
+       AUDIO PLAYLIST (tighter)
     ========================== */
     .audio-wrap {
       max-width: 800px;
-      margin: 0.8rem auto 1.2rem auto; /* tighter top & bottom */
+      margin: 0.8rem auto 1.2rem auto;
       padding: 0.75rem 0.85rem;
       border-radius: 14px;
       background: #2b211e;
@@ -261,14 +279,14 @@
       margin-top: 0.5rem;
       display: flex;
       flex-direction: column;
-      gap: 0.3rem; /* tighter gap */
+      gap: 0.3rem;
     }
 
     .playlist-row {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 0.45rem 0.85rem; /* tighter padding */
+      padding: 0.45rem 0.85rem;
       background: #1f1815;
       border-radius: 8px;
       cursor: pointer;
@@ -379,65 +397,27 @@
        RESPONSIVE
     ========================== */
     @media (max-width: 900px) {
+      .title-block h1 {
+        font-size: 1.4rem;
+      }
       .brand-subtitle {
-        display: none;
-      }
-
-      .ref-nav ul {
-        gap: 0.4rem;
-      }
-
-      .ref-nav a {
-        padding: 0.25rem 0.55rem;
-        font-size: 0.75rem;
-      }
-
-      .current-page-badge {
-        display: none;
+        display:none;
       }
     }
 
-    @media (max-width: 768px) {
-      .ref-header-inner {
-        flex-wrap: nowrap;
+    @media (max-width: 640px) {
+      .header-top {
+        flex-direction:column;
+        align-items:flex-start;
       }
-
-      .ref-nav {
-        position: fixed;
-        top: 56px;
-        left: 0;
-        right: 0;
-        background: #1f1815;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.08);
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.25s ease;
-        margin-left: 0;
+      .current-page-badge {
+        margin-top:0.35rem;
       }
-
-      .ref-nav ul {
-        flex-direction: column;
-        padding: 0.5rem 1rem 0.8rem;
-        gap: 0.25rem;
+      .header-bottom {
+        flex-wrap:wrap;
       }
-
-      .ref-nav a {
-        width: 100%;
-        justify-content: flex-start;
-      }
-
-      .ref-header.nav-open .ref-nav {
-        max-height: 260px;
-      }
-
-      .nav-toggle {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .page-content {
-        padding-top: 4.7rem;
+      .header-brand {
+        display:none; /* hide logo on very small screens if space is tight */
       }
     }
   </style>
@@ -453,13 +433,40 @@
 
 <body>
 
-  <!-- FIXED GLOBAL HEADER (Style A) -->
+  <!-- GLOBAL HEADER -->
   <header class="ref-header">
     <div class="ref-header-inner">
 
-      <!-- Left brand -->
-      <div class="ref-header-left">
-        <a href="/reflections/index.html" class="brand-link">
+      <!-- TOP ROW: Title + subtle badge -->
+      <div class="header-top">
+        <div class="title-block">
+          <h1>The Paradox of God</h1>
+          <p class="sub">A Solitude Reflection by Ninox Antolihao</p>
+        </div>
+
+        <div class="current-page-badge">
+          <span class="page-icon">△</span>
+          <span>The Paradox of God</span>
+        </div>
+      </div>
+
+      <!-- BOTTOM ROW: hamburger + nav + brand/logo -->
+      <div class="header-bottom">
+        <button class="nav-toggle" type="button" aria-label="Menu">
+          ☰
+        </button>
+
+        <nav class="ref-nav" aria-label="Reflections navigation">
+          <ul>
+            <li><a href="/reflections/index.html" class="active">Home</a></li>
+            <li><a href="/">Stone Grill Resto</a></li>
+            <li><a href="/order/">Orders</a></li>
+            <li><a href="/reflections/index.html#more">More Reflections</a></li>
+            <li><a href="/reflections/about.html">About</a></li>
+          </ul>
+        </nav>
+
+        <a href="/reflections/index.html" class="header-brand">
           <span class="brand-mark">✦</span>
           <span class="brand-text">
             <span class="brand-title">Moments of Solitude</span>
@@ -467,45 +474,13 @@
           </span>
         </a>
       </div>
-
-      <!-- Center nav (your requested items) -->
-      <nav class="ref-nav" aria-label="Reflections navigation">
-        <ul>
-          <!-- Home = back to reflections -->
-          <li><a href="/reflections/index.html" class="active">Home</a></li>
-
-          <!-- Stone Grill root site -->
-          <li><a href="/">Stone Grill Resto</a></li>
-
-          <!-- Orders page (adjust URL if needed) -->
-          <li><a href="/order/">Orders</a></li>
-
-          <!-- More Reflections (anchor on reflections index) -->
-          <li><a href="/reflections/index.html#more">More Reflections</a></li>
-
-          <!-- About page (adjust path if your about page is different) -->
-          <li><a href="/reflections/about.html">About</a></li>
-        </ul>
-      </nav>
-
-      <!-- Right: current page badge + hamburger -->
-      <div class="ref-header-right">
-        <div class="current-page-badge">
-          <span class="page-icon">△</span>
-          <span class="page-label">The Paradox of God</span>
-        </div>
-
-        <button class="nav-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">
-          ☰
-        </button>
-      </div>
     </div>
   </header>
 
   <main class="page-content">
     <div class="content">
 
-      <!-- AUDIO PLAYER + PLAYLIST (tighter margins) -->
+      <!-- AUDIO PLAYER + PLAYLIST -->
       <section class="audio-wrap">
         <audio id="reflectionAudio" controls preload="metadata">
           <source id="audioSource" src="" type="audio/mpeg">
@@ -535,8 +510,7 @@
 
       <div class="divider">— ❖ —</div>
 
-      <!-- MAIN ARTICLE -->
-      <h2>The Paradox of God</h2>
+      <!-- ARTICLE CONTENT (no extra H2 title) -->
       <p>There is a strange tension at the heart of the divine — a paradox that religion often avoids but the soul keeps returning to.</p>
       <p>We are told that God is perfect, yet creates what is flawed. All-knowing, yet surprised by disobedience. All-powerful, yet wounded by human failure. Loving, yet capable of wrath so great that entire worlds tremble.</p>
       <p>If everything is foreseen, written, and woven into a plan, then what part of us is truly free? And why would a perfect being design a story where the creation is destined to fail, only to be judged for fulfilling the script?</p>
@@ -547,10 +521,7 @@
       <p>And in that wondering, we discover something deeper: that truth is not found in answers that silence the mind, but in questions that awaken the soul.</p>
       <p>This is the paradox of God.</p>
 
-      <div class="divider">— ❖ —</div>
-
-      <!-- SHARE + REPLAY -->
-      <section class="share-row">
+      <div class="share-row">
         <button class="btn" id="shareBtn">
           <span class="icon">🔗</span>
           <span>Share this reflection</span>
@@ -560,7 +531,7 @@
           <span class="icon">⟲</span>
           <span>Play from start</span>
         </button>
-      </section>
+      </div>
     </div>
   </main>
 
@@ -569,26 +540,15 @@
 
   <!-- ========== SCRIPTS ========== -->
   <script>
-    // Hamburger toggle for mobile
-    (function () {
-      const header = document.querySelector('.ref-header');
-      const toggle = document.querySelector('.nav-toggle');
-      const nav = document.querySelector('.ref-nav');
-
-      if (!header || !toggle || !nav) return;
-
-      toggle.addEventListener('click', () => {
-        const isOpen = header.classList.toggle('nav-open');
-        toggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
-      });
-
-      nav.addEventListener('click', (e) => {
-        if (e.target.tagName.toLowerCase() === 'a') {
-          header.classList.remove('nav-open');
-          toggle.setAttribute('aria-expanded', 'false');
-        }
-      });
-    })();
+    // Simple hamburger behavior: scroll to top (nav is always visible)
+    document.addEventListener('DOMContentLoaded', () => {
+      const menuBtn = document.querySelector('.nav-toggle');
+      if (menuBtn) {
+        menuBtn.addEventListener('click', () => {
+          window.scrollTo({ top: 0, behavior: 'smooth' });
+        });
+      }
+    });
   </script>
 
   <script>
@@ -598,14 +558,12 @@
       const audioSource = document.getElementById('audioSource');
       const rows = document.querySelectorAll('.playlist-row');
 
-      // Default track: first row
       if (rows.length > 0) {
         const firstSrc = rows[0].dataset.src;
         audioSource.src = firstSrc;
         audioPlayer.load();
       }
 
-      // Clicking a row switches track
       rows.forEach(row => {
         row.addEventListener('click', () => {
           rows.forEach(r => r.classList.remove('active'));
@@ -618,7 +576,6 @@
         });
       });
 
-      // Auto-fill durations
       rows.forEach(row => {
         const src = row.dataset.src;
         const tempAudio = new Audio(src);
@@ -634,7 +591,7 @@
         });
       });
 
-      // Optional autoplay if opened with ?autoplay=1
+      // Optional autoplay support
       const p = new URLSearchParams(location.search);
       const fromIndex = p.get('autoplay') === '1' || sessionStorage.getItem('autoplayAudio') === 'true';
       if (fromIndex && audioPlayer) {
@@ -704,6 +661,5 @@
       }
     })();
   </script>
-
 </body>
 </html>
