--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -83,13 +83,13 @@
     .ref-header-inner {
       max-width: 1100px;
       margin: 0 auto;
-      padding: 0.55rem 1rem 0.65rem;
+      padding: 0.55rem 1rem 0.5rem;
       display: flex;
       flex-direction: column;
       gap: 0.4rem;
     }
 
-    /* Top row: title + subtitle */
+    /* Top row: title + subtitle + badge */
     .header-top {
       display:flex;
       align-items:flex-start;
@@ -102,18 +102,19 @@
       flex-direction:column;
       min-width:0;
     }
+
     .title-block h1 {
       margin:0;
       font-size:1.6rem;
       letter-spacing:.04em;
     }
+
     .title-block p.sub {
       margin:.25rem 0 0;
       font-size:.9rem;
       color:#c9b0a4;
     }
 
-    /* Right in top row: small current-page badge */
     .current-page-badge {
       display:inline-flex;
       align-items:center;
@@ -127,12 +128,13 @@
       white-space:nowrap;
       flex-shrink:0;
     }
+
     .page-icon {
       font-size:0.85rem;
       color:#ffb347;
     }
 
-    /* Bottom row: hamburger + nav + brand on right */
+    /* Bottom row: hamburger + nav + brand/logo */
     .header-bottom {
       display:flex;
       align-items:center;
@@ -189,7 +191,6 @@
       font-weight:600;
     }
 
-    /* Brand / logo on the right */
     .header-brand {
       display:flex;
       align-items:center;
@@ -231,13 +232,90 @@
       opacity:0.8;
     }
 
+    /* ========== HAMBURGER DROPDOWN: LIST OF REFLECTION PAGES ========== */
+    .hamburger-menu {
+      max-width:1100px;
+      margin:0 auto;
+      overflow:hidden;
+      max-height:0;
+      transition:max-height 0.25s ease;
+      padding:0 1rem;
+    }
+
+    .ref-header.menu-open .hamburger-menu {
+      max-height:260px; /* enough space for list */
+    }
+
+    .hamburger-inner {
+      margin:0.4rem 0 0.5rem;
+      padding:0.6rem 0.8rem;
+      border-radius:12px;
+      background:#241b18;
+      border:1px solid rgba(255,255,255,0.08);
+      box-shadow:0 8px 18px rgba(0,0,0,0.5);
+    }
+
+    .hamburger-inner p.label {
+      margin:0 0 0.4rem;
+      font-size:0.78rem;
+      text-transform:uppercase;
+      letter-spacing:0.08em;
+      color:#c9b0a4;
+      opacity:0.9;
+    }
+
+    .hamburger-list {
+      list-style:none;
+      margin:0;
+      padding:0;
+      display:flex;
+      flex-direction:column;
+      gap:0.25rem;
+    }
+
+    .hamburger-list a {
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      text-decoration:none;
+      font-size:0.85rem;
+      padding:0.32rem 0.55rem;
+      border-radius:8px;
+      color:#f3e6dd;
+      border:1px solid transparent;
+    }
+
+    .hamburger-list a span.title {
+      flex:1;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+
+    .hamburger-list a span.chevron {
+      font-size:0.8rem;
+      margin-left:0.25rem;
+      opacity:0.7;
+    }
+
+    .hamburger-list a:hover {
+      border-color:rgba(255,107,61,0.5);
+      background:rgba(255,107,61,0.08);
+    }
+
+    .hamburger-list a.active {
+      border-color:#ff6b3d;
+      background:rgba(255,107,61,0.2);
+      font-weight:600;
+    }
+
     /* =========================
        MAIN LAYOUT
     ========================== */
     .page-content {
       max-width: 1100px;
       margin: 0 auto;
-      padding: 4.6rem 1rem 2.5rem; /* space for header */
+      padding: 4.7rem 1rem 2.5rem; /* base space for header */
     }
 
     .content {
@@ -417,7 +495,7 @@
         flex-wrap:wrap;
       }
       .header-brand {
-        display:none; /* hide logo on very small screens if space is tight */
+        display:none;
       }
     }
   </style>
@@ -452,11 +530,11 @@
 
       <!-- BOTTOM ROW: hamburger + nav + brand/logo -->
       <div class="header-bottom">
-        <button class="nav-toggle" type="button" aria-label="Menu">
+        <button class="nav-toggle" type="button" aria-label="Reflections menu" aria-expanded="false">
           ☰
         </button>
 
-        <nav class="ref-nav" aria-label="Reflections navigation">
+        <nav class="ref-nav" aria-label="Main navigation">
           <ul>
             <li><a href="/reflections/index.html" class="active">Home</a></li>
             <li><a href="/">Stone Grill Resto</a></li>
@@ -473,6 +551,51 @@
             <span class="brand-subtitle">Stone Grill Reflections</span>
           </span>
         </a>
+      </div>
+    </div>
+
+    <!-- HAMBURGER DROPDOWN: LIST OF REFLECTIONS PAGES -->
+    <div class="hamburger-menu" aria-hidden="true">
+      <div class="hamburger-inner">
+        <p class="label">Reflections</p>
+        <ul class="hamburger-list">
+          <li>
+            <a href="/reflections/pages/the-paradox-of-god/read.html" class="active">
+              <span class="title">The Paradox of God</span>
+              <span class="chevron">›</span>
+            </a>
+          </li>
+          <li>
+            <a href="/reflections/pages/divine-hiddeness/read.html">
+              <span class="title">The Divine Premise</span>
+              <span class="chevron">›</span>
+            </a>
+          </li>
+          <li>
+            <a href="/reflections/pages/the-lost-language-of-metaphor/read.html">
+              <span class="title">The Lost Language of Metaphor</span>
+              <span class="chevron">›</span>
+            </a>
+          </li>
+          <li>
+            <a href="/reflections/pages/the-madness-of-fath/read.html">
+              <span class="title">The Madness of Faith</span>
+              <span class="chevron">›</span>
+            </a>
+          </li>
+          <li>
+            <a href="/reflections/pages/the-god-we-created/read.html">
+              <span class="title">The God We Created</span>
+              <span class="chevron">›</span>
+            </a>
+          </li>
+          <li>
+            <a href="/reflections/pages/initial-premise/read.html">
+              <span class="title">The Fullness that Needs Nothing</span>
+              <span class="chevron">›</span>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </header>
@@ -510,7 +633,7 @@
 
       <div class="divider">— ❖ —</div>
 
-      <!-- ARTICLE CONTENT (no extra H2 title) -->
+      <!-- ARTICLE CONTENT -->
       <p>There is a strange tension at the heart of the divine — a paradox that religion often avoids but the soul keeps returning to.</p>
       <p>We are told that God is perfect, yet creates what is flawed. All-knowing, yet surprised by disobedience. All-powerful, yet wounded by human failure. Loving, yet capable of wrath so great that entire worlds tremble.</p>
       <p>If everything is foreseen, written, and woven into a plan, then what part of us is truly free? And why would a perfect being design a story where the creation is destined to fail, only to be judged for fulfilling the script?</p>
@@ -540,14 +663,28 @@
 
   <!-- ========== SCRIPTS ========== -->
   <script>
-    // Simple hamburger behavior: scroll to top (nav is always visible)
+    // Hamburger toggle for reflections list
     document.addEventListener('DOMContentLoaded', () => {
-      const menuBtn = document.querySelector('.nav-toggle');
-      if (menuBtn) {
-        menuBtn.addEventListener('click', () => {
-          window.scrollTo({ top: 0, behavior: 'smooth' });
-        });
-      }
+      const header   = document.querySelector('.ref-header');
+      const toggle   = document.querySelector('.nav-toggle');
+      const flyout   = document.querySelector('.hamburger-menu');
+
+      if (!header || !toggle || !flyout) return;
+
+      toggle.addEventListener('click', () => {
+        const isOpen = header.classList.toggle('menu-open');
+        toggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
+        flyout.setAttribute('aria-hidden', isOpen ? 'false' : 'true');
+      });
+
+      // Close menu when a reflection link is clicked
+      flyout.addEventListener('click', (e) => {
+        if (e.target.tagName.toLowerCase() === 'a' || e.target.closest('a')) {
+          header.classList.remove('menu-open');
+          toggle.setAttribute('aria-expanded', 'false');
+          flyout.setAttribute('aria-hidden', 'true');
+        }
+      });
     });
   </script>
 
