--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -338,80 +338,87 @@
 
     /* =========================
        AUDIO PLAYLIST (tighter)
-    ========================== */
-    .audio-wrap {
-      max-width: 800px;
-      margin: 0.8rem auto 1.2rem auto;
-      padding: 0.75rem 0.85rem;
-      border-radius: 14px;
-      background: #2b211e;
-      border: 1px solid rgba(255, 107, 61, 0.35);
-    }
+    ====/* AUDIO PLAYLIST – CLEAN LOOK */
+.audio-wrapper {
+  margin: 0.4rem 0 0;
+  padding: 0.8rem 0.2rem 0.2rem;
+  border-radius: 10px;
+}
 
-    #reflectionAudio {
-      width: 100%;
-      display: block;
-    }
+/* Main audio element */
+#reflectionAudio {
+  width: 100%;
+  display: block;
+}
 
-    .playlist {
-      margin-top: 0.5rem;
-      display: flex;
-      flex-direction: column;
-      gap: 0.3rem;
-    }
+/* Playlist container */
+.playlist {
+  margin-top: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.35rem;
+}
 
-    .playlist-row {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0.45rem 0.85rem;
-      background: #1f1815;
-      border-radius: 8px;
-      cursor: pointer;
-      border: 1px solid #2b221f;
-      transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
-    }
+/* Each track */
+.playlist-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+  padding: 0.7rem 1rem;
+  background: #1f1815;
+  border-radius: 8px;
+  cursor: pointer;
 
-    .playlist-row:hover {
-      border-color: #ff6b3d;
-    }
+  /* removed border here */
+  border: none;
 
-    .playlist-row.active {
-      background: #322621;
-      border-color: #ff6b3d;
-      box-shadow: 0 0 6px rgba(255, 107, 61, 0.45);
-    }
+  transition: background 0.15s ease, box-shadow 0.2s ease;
+}
 
-    .playlist-main {
-      display: flex;
-      flex-direction: column;
-      gap: 0.1rem;
-      overflow: hidden;
-    }
+/* Hover (subtle only) */
+.playlist-row:hover {
+  background: #241d1a;
+}
 
-    .playlist-title {
-      font-size: 0.96rem;
-      font-weight: 600;
-      color: #f3e6dd;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+/* Active track highlight — NO border, just glow */
+.playlist-row.active {
+  background: #322621;
+  box-shadow: 0 0 12px rgba(255, 107, 61, 0.35);
+}
 
-    .playlist-sub {
-      font-size: 0.78rem;
-      color: #b29587;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
+/* Title & subtitle */
+.playlist-main {
+  display: flex;
+  flex-direction: column;
+  gap: 0.1rem;
+  overflow: hidden;
+}
 
-    .playlist-duration {
-      font-size: 0.82rem;
-      color: #c9b0a4;
-      margin-left: 0.75rem;
-      flex-shrink: 0;
-    }
+.playlist-title {
+  font-size: 0.98rem;
+  font-weight: 600;
+  color: #f3e6dd;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.playlist-sub {
+  font-size: 0.8rem;
+  color: #b29587;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* Duration */
+.playlist-duration {
+  font-size: 0.85rem;
+  color: #c9b0a4;
+  margin-left: 1rem;
+  flex-shrink: 0;
+}
 
     /* =========================
        SHARE / REPLAY
