--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -312,6 +312,13 @@
     /* =========================
        MAIN LAYOUT
     ========================== */
+    .page-wrap {
+  max-width: 780px;
+  margin: 0 auto;
+  /* extra top padding so content clears the header */
+  padding: 4.5rem 1.25rem 3rem;
+}
+    
     .page-content {
       max-width: 1100px;
       margin: 0 auto;
